--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ hiltCompiler = "1.2.0"
 hiltNavigationCompose = "1.2.0"
 ksp = "1.9.21-1.0.16"
 ktlint = "11.6.1"
-composeNavigation = "2.7.7"
+composeNavigation = "2.8.0-beta02"
 serialization = "1.6.3"
 splashScreen = "1.0.1"
 
