--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,8 @@ ktlint = "11.6.1"
 composeNavigation = "2.8.0-beta02"
 serialization = "1.6.3"
 splashScreen = "1.0.1"
+mockk = "1.13.11"
+turbineVersion = "1.1.0"
 
 [libraries]
 # ***** Core *****
@@ -39,6 +41,12 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
+turbine = {group = "app.cash.turbine", name = "turbine", version.ref = "turbineVersion" }
+
+# ***** Mockk *****
+mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockk" }
+mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
 
 # ***** Dependency Injection *****
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
