--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ splashScreen = "1.0.1"
 mockk = "1.13.11"
 turbineVersion = "1.1.0"
 core = "1.44.0"
+coroutines = "1.7.3"
 
 [libraries]
 # ***** Core *****
@@ -44,6 +45,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 turbine = {group = "app.cash.turbine", name = "turbine", version.ref = "turbineVersion" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines" }
 
 # ***** Mockk *****
 mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockk" }
