--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ mockk = "1.13.11"
 turbineVersion = "1.1.0"
 core = "1.44.0"
 coroutines = "1.7.3"
+moshi = "1.15.0"
 
 [libraries]
 # ***** Core *****
@@ -61,6 +62,10 @@ hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-com
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "composeNavigation" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
 core = { group = "com.google.ar", name = "core", version.ref = "core" }
+
+# ***** Moshi *****
+square-moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi" }
+kotlin-moshi-codegen = { group = "com.squareup.moshi", name = "moshi-kotlin-codegen", version.ref = "moshi" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
